--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -62,6 +62,8 @@ keycloak:
     # Dont include the realmIdentityProviders and realmIdentityProviderMappers by default as it overwrites currently configured entra providers for multiple gemeentes
     # realmIdentityProviders: {}
     # realmIdentityProviderMappers: {}
+    skipGroups: true
+    skipRoles: true
     smtp:
       server: mail.example.nl
       port: "587"
