feat: add hostname-related environment variables for Keycloak and update cache argument in values.yaml

--- a/charts/podiumd/templates/keycloak-extra-env-vars-configmap.yaml
+++ b/charts/podiumd/templates/keycloak-extra-env-vars-configmap.yaml
@@ -8,4 +8,7 @@ metadata:
 data:
   #KC_HOSTNAME_URL: {{ .Values.keycloak.config.realmFrontendUrl | quote }}
   #KC_HOSTNAME_ADMIN_URL: {{ .Values.keycloak.config.adminFrontendUrl | quote }}
+  KEYCLOAK_HOSTNAME: {{ .Values.keycloak.ingress.hostname | quote }}
+  KEYCLOAK_ADMIN_HOSTNAME: {{ .Values.keycloak.adminIngress.hostname | quote }}
+  KEYCLOAK_HOSTNAME_STRICT: {{ .Values.keycloak.ingress.hostnameStrict | quote }}
 {{- end }}
