--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -192,7 +192,6 @@ infinispan:
               statistics: "true"
               owners: 2
               mode: "SYNC"
-              transactional: "true"
               transaction:
                 mode: "NON_XA"
               encoding:
@@ -211,7 +210,6 @@ infinispan:
               statistics: "true"
               owners: 2
               mode: "SYNC"
-              transactional: "true"
               transaction:
                 mode: "NON_XA"
               encoding:
@@ -226,7 +224,6 @@ infinispan:
               statistics: "true"
               owners: 2
               mode: "SYNC"
-              transactional: "true"
               transaction:
                 mode: "NON_XA"
               encoding:
@@ -241,6 +238,8 @@ infinispan:
               statistics: "true"
               owners: 2
               mode: "SYNC"
+              transaction:
+                mode: "NON_XA"
               encoding:
                 mediaType: "application/x-protostream"
               expiration:
@@ -253,7 +252,6 @@ infinispan:
               statistics: "true"
               owners: 2
               mode: "SYNC"
-              transactional: "true"
               transaction:
                 mode: "NON_XA"
               encoding:
@@ -268,7 +266,6 @@ infinispan:
               statistics: "true"
               owners: 2
               mode: "SYNC"
-              transactional: "true"
               transaction:
                 mode: "NON_XA"
               encoding:
