fix: set default value for `hostnameStrict` in Keycloak configmap

--- a/charts/podiumd/templates/keycloak-extra-env-vars-configmap.yaml
+++ b/charts/podiumd/templates/keycloak-extra-env-vars-configmap.yaml
@@ -6,9 +6,7 @@ metadata:
   labels:
     {{- include "podiumd.labels" . | nindent 4 }}
 data:
-  #KC_HOSTNAME_URL: {{ .Values.keycloak.config.realmFrontendUrl | quote }}
-  #KC_HOSTNAME_ADMIN_URL: {{ .Values.keycloak.config.adminFrontendUrl | quote }}
   KEYCLOAK_HOSTNAME: {{ .Values.keycloak.config.realmFrontendUrl | quote }}
   KEYCLOAK_HOSTNAME_ADMIN: {{ .Values.keycloak.config.adminFrontendUrl | quote }}
-  KEYCLOAK_HOSTNAME_STRICT: {{ .Values.keycloak.ingress.hostnameStrict | quote }}
+  KEYCLOAK_HOSTNAME_STRICT: {{ default "true" .Values.keycloak.ingress.hostnameStrict | quote }}
 {{- end }}
