fix: add missing Keycloak cache environment variables in configmap

--- a/charts/podiumd/templates/keycloak-extra-env-vars-configmap.yaml
+++ b/charts/podiumd/templates/keycloak-extra-env-vars-configmap.yaml
@@ -9,4 +9,6 @@ data:
   KEYCLOAK_HOSTNAME: {{ .Values.keycloak.config.realmFrontendUrl | quote }}
   KEYCLOAK_HOSTNAME_ADMIN: {{ .Values.keycloak.config.adminFrontendUrl | quote }}
   KEYCLOAK_HOSTNAME_STRICT: {{ default "true" .Values.keycloak.ingress.hostnameStrict | quote }}
+  KC_CACHE: "ispn"
+  KC_CACHE_STACK: "jdbc-ping"
 {{- end }}
