feat: clarify comment on e2e-test zaaktype creation and publishing

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -457,7 +457,7 @@ openzaak:
     secret: "<openzaak_secret>"
     enabled: true
     e2eTestZaaktype:
-      # set to false to disable automatic creation of the e2e-test zaaktype if it does not exist yet
+      # set to false to disable automatic creation and publishing of the e2e-test zaaktype if it does not exist yet
       create: true
   settings:
     allowedHosts: openzaak-nginx.podiumd.svc.cluster.local
