fix: correct Keycloak admin hostname variable name in configmap for alignment with naming conventions

--- a/charts/podiumd/templates/keycloak-extra-env-vars-configmap.yaml
+++ b/charts/podiumd/templates/keycloak-extra-env-vars-configmap.yaml
@@ -7,5 +7,5 @@ metadata:
     {{- include "podiumd.labels" . | nindent 4 }}
 data:
   KC_HOSTNAME_URL: {{ .Values.keycloak.config.realmFrontendUrl | quote }}
-  KC_ADMIN_HOSTNAME_URL: {{ .Values.keycloak.config.adminFrontendUrl | quote }}
+  KC_HOSTNAME_ADMIN_URL: {{ .Values.keycloak.config.adminFrontendUrl | quote }}
 {{- end }}
