* Upgraded the version of helm chart 1.0.8 * Changed the version in README.md and values.yaml files

--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -129,7 +129,7 @@ grafana:
   # -- Grafana image settings
   image:
     pullPolicy: IfNotPresent
-    tag: 12.1.0
+    tag: 12.1.0-16509090662-ubuntu
 
   initChownData:
     # -- Busybox image settings
